# DumbDateLib

./: CMakeLists.txt  README.md  dumb_date.cpp  dumb_date.h  main_test.cpp
